success to fix overflow-x problem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,8 +4,6 @@
     font-family: 'Noto Sans TC', sans-serif;
 }
 body {
-    position: fixed;
-    width:100%;height:100%;
     margin: 0px;
 }
 header {
@@ -230,12 +228,12 @@ main {margin-top:55px;}
     }
     .background-img {
         width:350px;height:200px;
-        position:absolute;top:28px;right:0px; /*想不到辦法*/
+        position:absolute;top:28px;right:-140px; /*想不到辦法*/
     }
     .backgroundbox {
-        width:350px;height:228px;
-        position:absolute;top:174px;right:-150px;
-        overflow: hidden;
+        width:230px;height:228px;
+        position:absolute;top:174px;right:0px;
+        overflow-x:hidden; /*設定box寬度(大小於img,就可以產生overflow-x，並且把它隱藏*/
     }
 }
 
